# algoritmo-borroso

./: README.md
OMP/: CMakeLists.txt  Makefile  borroso_OMP  borroso_OMP.cpp  pruebaOMP.sh  readmeomp  resultados.txt  resultados2  start.sh
cuda/: borrosoCUDA  borrosoCUDA.cpp  borrosoCUDA.cu  pruebaCuda.sh  pruebas_GPU.sh  readmecuda  resultados finales  resultados.txt  start.sh
hilos2/: CMakeLists.txt  Makefile  README.md  ResultadosFinales  borroso  borroso.cpp  pruebaHilos.sh
secuencial/: CMakeLists.txt  LEEME.txt  Makefile  borroso  borroso.cpp  pruebaSecuencial.sh
