CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(borroso_OMP)
include(FindOpenMP)
if(OPENMP_FOUND)
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
endif()
FIND_PACKAGE(OpenCV REQUIRED)
INCLUDE_DIRECTORIES( ${OpenCV_INCLUDE_DIRS} )
ADD_COMPILE_OPTIONS(-std=c++11)
ADD_COMPILE_OPTIONS(-fopenmp)
ADD_EXECUTABLE(borroso_OMP borroso_OMP.cpp)
TARGET_LINK_LIBRARIES(borroso_OMP ${OpenCV_LIBS})
TARGET_LINK_LIBRARIES(borroso_OMP ${CMAKE_THREAD_LIBS_INIT})