CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(borroso)
FIND_PACKAGE(OpenCV REQUIRED)
FIND_PACKAGE(Threads)
INCLUDE_DIRECTORIES( ${OpenCV_INCLUDE_DIRS} )
ADD_COMPILE_OPTIONS(-std=c++11)
ADD_EXECUTABLE(borroso borroso.cpp)
TARGET_LINK_LIBRARIES(borroso ${OpenCV_LIBS})
TARGET_LINK_LIBRARIES(borroso ${CMAKE_THREAD_LIBS_INIT})
